# smart-parking-system-oops

./: CMakeLists.txt  README.md  index.html  script.js  server.cpp  style.css
